src/objects/Call_Log__c.object
<CustomObject>
    <fields>
        <fullName>Advice_given__c</fullName>
        <label>Advice given:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_trouble_getting_through_to_info_line__c</fullName>
        <label>Any trouble getting through to info line</label>
        <picklist>
            <picklistValues>
                <fullName>Got though first time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was kept on hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number was busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than two tries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_satisfied_that_you_got_all_the__c</fullName>
        <description>Are you satisfied that you got all the information that you needed from calling?</description>
        <label>Are you satisfied you got all info</label>
        <picklist>
            <picklistValues>
                <fullName>Very satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Breakdown_PA__c</fullName>
        <label>Breakdown of Primary Area:</label>
        <picklist>
            <controllingField>Primary_area_of_law__c</controllingField>
            <picklistValues>
                <fullName>Tort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court proceedings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ward of Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deedpoll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom of Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitor fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory performance/rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting up company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goods &amp; services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communcaitons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer and acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mistake and misrepresentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Collection Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repossession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary surrender</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Breakdown_SA__c</fullName>
        <label>Breakdown of Secondary Area:</label>
        <picklist>
            <controllingField>Secondary_area_of_law__c</controllingField>
            <picklistValues>
                <fullName>Tort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court proceedings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ward of Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deedpoll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom of Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitor fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory performance/rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting up company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goods &amp; services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communcaitons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer and acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mistake and misrepresentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Collection Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repossession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary surrender</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County:</label>
        <picklist>
            <picklistValues>
                <fullName>Antrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fermanagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kildare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilkenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leitrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monaghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roscommon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sligo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tipperary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tyrone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westmeath</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_query__c</fullName>
        <label>Details of query:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_needed__c</fullName>
        <label>Follow-up needed:</label>
        <picklist>
            <picklistValues>
                <fullName>Potential test case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication case study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family panel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender:</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calling on behalf of minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calling on behalf of friend/relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calling on behalf of client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highlight__c</fullName>
        <formula>IF( Hightlight_Call__c = true, IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000001PN7c&quot;, &quot;RED&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highlight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hightlight_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Highlight Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_FLAC__c</fullName>
        <label>How did you hear about FLAC?</label>
        <picklist>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>citizeninformation.ie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equality Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Consumer Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lay_Litigant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if caller is representing themselves</description>
        <label>Lay Litigant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <inlineHelpText>Please record how long this call lasted in minutes</inlineHelpText>
        <label>Length of call (minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <picklist>
            <picklistValues>
                <fullName>Amy Heffron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Smyth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columb Fortune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Hanrahan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eamonn Tansey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emma Maguire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fionn Toland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geraldine Murphy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacqueline Heffernan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathryn Walker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lorraine Walsh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marian Ward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mimi Goodman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orla Hubbard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarah Jane Corbett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yvonne O&apos;Sullivan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Public_Calls__c</fullName>
        <label>Non Public Calls</label>
        <picklist>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Departments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policitians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_area_of_law__c</fullName>
        <label>Primary area of law:</label>
        <picklist>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client-Solicitor relations/issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit &amp; Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing/Landlord &amp; Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration/refugee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negligence/Personal Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbour disputes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property/Interest in Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will/Probate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_from__c</fullName>
        <label>Referred from:</label>
        <picklist>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barnardos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMREG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courts Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crosscare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Regulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC website/ online information service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garda Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Consumer Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Beginnings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victim Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to1__c</fullName>
        <label>Referred to:</label>
        <picklist>
            <picklistValues>
                <fullName>FLAC General Centre Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre General Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (LAB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barnardos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMREG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courts Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection Commissioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garda Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigrant Council of Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrant Rights Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Consumer Agenc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Beginnings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of the Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probate Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threshold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to2__c</fullName>
        <label>Referred to:</label>
        <picklist>
            <picklistValues>
                <fullName>FLAC General Centre Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre General Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (LAB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barnardos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMREG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courts Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection Commissioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garda Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigrant Council of Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrant Rights Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Consumer Agenc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Beginnings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of the Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probate Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threshold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>